<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu01"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav1" />
        <item
            android:id="@+id/nav2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav2" />
        <item
            android:id="@+id/nav3"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav3" />
        <item
            android:id="@+id/nav4"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav4" />
        <item
            android:id="@+id/nav5"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav5" />
        <item
            android:id="@+id/nav6"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav6" />
        <item
            android:title="LOGIN / SETTING (수정)">
            <menu>
                <item
                    android:id = "@+id/menu_login"
                    android:title="로그인"/>
                <item
                    android:id = "@+id/menu_setting"
                    android:title="설정"/>
            </menu>
        </item>
            android:id="@+id/nav_home"
            android:title="모두 표시" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/topnie"
            android:title="시공/설계" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/bosu"
            android:title="유지/보수" />
        <item
            android:id="@+id/gonggu"
            android:icon="@drawable/spanner"
            android:title="공구" />
        <item
            android:id="@+id/jungu"
            android:icon="@drawable/lightbulb"
            android:title="전기/전자" />
        <item
            android:id="@+id/car"
            android:icon="@drawable/car"
            android:title="자동차" />
        <item
            android:id="@+id/mungu"
            android:icon="@drawable/pencil"
            android:title="문구" />

    </group>


</menu>